--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<meta charset="ISO 8859-1">
+		<meta charset="iso-8859-1">
 		<title>Ajax com jQuery</title>
 
 		<!-- estilos -->
@@ -35,8 +35,8 @@
 		                    <a href="#"><i class="fa fa-life-ring sidebar-icon"></i> Ajuda <span class="arrow"><i class="fa fa-angle-down"></i></spam></a>
 		                </li>
 		                <ul class="sub-menu collapse" id="ajuda">
-		                    <li><a href="#"><i class="fa fa-angle-right"></i> Documentação</a></li>
-		                    <li><a href="#"><i class="fa fa-angle-right"></i> Suporte <small><i class="fa fa-external-link"></i></small></a></li>
+		                    <li><a id="documentacao" href="#"><i class="fa fa-angle-right"></i> Documentação</a></li>
+		                    <li><a id="suporte" href="#"><i class="fa fa-angle-right"></i> Suporte <small><i class="fa fa-external-link"></i></small></a></li>
 		                </ul>
 		            </ul>
 		     </div>
