criando  classes   PDO para rec de valores

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<meta charset="iso-8859-1">
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<title>Ajax com jQuery</title>
 
 		<!-- estilos -->
@@ -35,7 +35,7 @@
 		                    <a href="#"><i class="fa fa-life-ring sidebar-icon"></i> Ajuda <span class="arrow"><i class="fa fa-angle-down"></i></spam></a>
 		                </li>
 		                <ul class="sub-menu collapse" id="ajuda">
-		                    <li><a id="documentacao" href="#"><i class="fa fa-angle-right"></i> Documentação</a></li>
+		                    <li><a id="documentacao" href="#"><i class="fa fa-angle-right"></i> DocumentaÃ§Ã£o</a></li>
 		                    <li><a id="suporte" href="#"><i class="fa fa-angle-right"></i> Suporte <small><i class="fa fa-external-link"></i></small></a></li>
 		                </ul>
 		            </ul>
@@ -52,7 +52,7 @@
 						
 						<form>
 							<div class="form-group row">
-								<label class="col-sm-9 col-form-label">Competências:</label>
+								<label class="col-sm-9 col-form-label">CompetÃªncias:</label>
 								<div class="col-sm-3">
 									<select class="form-control-plaintext">
 										<option value="">-- Selecione </option>
@@ -73,7 +73,7 @@
 		    		<div class="col-md-4">
 		    			<div class="card">
 							<div class="card-header">
-								Número de vendas
+								NÃºmero de vendas
 							</div>
 							<div class="card-body">
 								 <h5 class="card-title">?</h5>
@@ -122,7 +122,7 @@
 					<div class="col-md-4">
 		    			<div class="card">
 							<div class="card-header">
-								Total de reclamações
+								Total de reclamaÃ§Ãµes
 							</div>
 							<div class="card-body">
 								 <h5 class="card-title">?</h5>
@@ -144,7 +144,7 @@
 		    		<div class="col-md-4">
 		    			<div class="card">
 							<div class="card-header">
-								Total de Sugestões
+								Total de SugestÃµes
 							</div>
 							<div class="card-body">
 								 <h5 class="card-title">?</h5>
